k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-hot
  labels:
    name: backend-hot
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-standby
  labels:
    name: backend-standby
