k8s/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: default
  labels:
    app: haproxy
spec:
  type: NodePort
  selector:
    app: haproxy
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
