k8s/service-standby.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  labels:
    app: backend-service
    cluster: standby
spec:
  type: LoadBalancer
  # Alternative: Use NodePort with externalIPs if LoadBalancer is not available
  # type: NodePort
  # externalIPs:
  #   - <STANDBY_CLUSTER_NODE_IP>
  selector:
    app: backend-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      # nodePort: 30080  # Uncomment if using NodePort type
