k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  type: NodePort
  selector:
    app: backend-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
